# ML

./: .gitignore  README.md  pyproject.toml
House_size/: Housing.py  Housing_noptebook.ipynb
House_size/.ipynb_checkpoints/: Housing_noptebook-checkpoint.ipynb
Student_score_predication/: README.md  Student_score_prediction.py  model.py  students_mark.csv
Uber_Price_prediction/: README.md  pyproject.toml
Uber_Ride_prediction/: ML_model.ipynb  README.md  app.py
Uber_Ride_prediction/static/: style.css
Uber_Ride_prediction/templates/: index.html
