[project]
name = "uber-project"
version = "This project is about predicting the price"
description = "Dhinesh1811"
authors = [
    {name = "Dhinesh1811",email = "sridhinesh1811@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
